--- a/com.unity.render-pipelines.universal/Editor/Decal/DecalPass.template
+++ b/com.unity.render-pipelines.universal/Editor/Decal/DecalPass.template
@@ -98,32 +98,12 @@ Pass
     // --------------------------------------------------
     // Build Surface Data
 
-    uint2 ComputeFadeMaskSeed(float3 V, uint2 positionSS)
+    uint2 ComputeFadeMaskSeed(uint2 positionSS)
     {
         uint2 fadeMaskSeed;
 
-        // Is this a reasonable quality gate?
-    /*#if defined(SHADER_QUALITY_HIGH)
-        if (IsPerspectiveProjection())
-        {
-            // Start with the world-space direction V. It is independent from the orientation of the camera,
-            // and only depends on the position of the camera and the position of the fragment.
-            // Now, project and transform it into [-1, 1].
-            float2 pv = PackNormalOctQuadEncode(V).xy;
-            // Rescale it to account for the resolution of the screen.
-            pv *= _ScreenParams.xy;
-            // The camera only sees a small portion of the sphere, limited by hFoV and vFoV.
-            // Therefore, we must rescale again (before quantization), roughly, by 1/tan(FoV/2).
-            pv *= UNITY_MATRIX_P._m00_m11;
-            // Truncate and quantize.
-            fadeMaskSeed = asuint((int2)pv);
-        }
-        else
-    #endif*/
-        {
-            // Can't use the view direction, it is the same across the entire screen.
-            fadeMaskSeed = positionSS;
-        }
+        // Can't use the view direction, it is the same across the entire screen.
+        fadeMaskSeed = positionSS;
 
         return fadeMaskSeed;
     }
@@ -141,7 +121,7 @@ Pass
             $Varyings.texCoord3: input.texCoord3.xy = input.texCoord3.xy * scale + offset;
         #else
             #ifdef LOD_FADE_CROSSFADE // enable dithering LOD transition if user select CrossFade transition in LOD group
-                LODDitheringTransition(ComputeFadeMaskSeed(viewDirectioWS, positionSS), unity_LODFade.x);
+                LODDitheringTransition(ComputeFadeMaskSeed(positionSS), unity_LODFade.x);
             #endif
 
             half fadeFactor = half(1.0);
