--- a/.yamato/all-shadergraph.yml
+++ b/.yamato/all-shadergraph.yml
@@ -23,7 +23,7 @@ PR_ShaderGraph_2021.1:
       -  path: .yamato/all-shadergraph_stereo.yml#PR_ShaderGraph_Stereo_2021.1
          rerun: on_new_revision
     triggers:
-        expression: pull_request.target eq "2021.1/staging" AND NOT pull_request.draft AND pull_request.changes.any match ["com.unity.shadergraph/**/*", "TestProjects/ShaderGraph/**/*"] AND NOT pull_request.push.changes.all match ["*.md", "**/*.md", "doc/**/*", "**/Documentation*/**/*"]
+        expression: pull_request.target eq "2021.1/staging" AND NOT pull_request.draft AND pull_request.changes.any match ["com.unity.shadergraph/**/*", "TestProjects/ShaderGraph/**/*"] AND NOT pull_request.changes.all match ["*.md", "**/*.md", "doc/**/*", "**/Documentation*/**/*"]
     variables:
         UTR_VERSION: "current"
         TEST_FILTER: .*
