--- a/.yamato/all-smoke_test.yml
+++ b/.yamato/all-smoke_test.yml
@@ -16,6 +16,8 @@ PR_Smoke_Test_2021.1:
          rerun: on_new_revision
       -  path: .yamato/smoke_test-win-dx11.yml#Smoke_Test_Win_DX11_Standalone_mono_Linear_2021.1
          rerun: on_new_revision
+    triggers:
+        expression: pull_request.target eq "2021.1/staging" AND NOT pull_request.draft AND pull_request.changes.any match ["TestProjects/SRP_SmokeTest/**/*"] AND NOT pull_request.changes.all match ["*.md", "**/*.md", "doc/**/*", "**/Documentation*/**/*"]
     variables:
         UTR_VERSION: "current"
         TEST_FILTER: .*
